# D3DShaderTest

./: CMakeLists.txt  README.md
cmake/: FindDirectX.cmake
dynamic_shaders/: CMakeLists.txt  resource.h  shaders.cpp  shaders.rc
dynamic_shaders/shaders/: hypnotic_pixel.hlsl  hypnotic_vertex.hlsl  rotating_triangle_vertex.hlsl
load_texture/: CMakeLists.txt  resource.h  texture.cpp  texture.rc
load_texture/shaders/: pixel_shader.hlsl  vertex_shader.hlsl
load_texture/textures/: stone-ground-diff.dds
shaders/: CMakeLists.txt  pixel_shader.hlsl  shaders.cpp  vertex_shader.hlsl
simple_triangle/: CMakeLists.txt  triangle.cpp
triangle/: CMakeLists.txt  resource.h  triangle.cpp  triangle.rc
